--- a/frontend/src/locales/ru.json
+++ b/frontend/src/locales/ru.json
@@ -21,7 +21,17 @@
     "calendar": "Календарь",
     "theme_selection": "Выбор темы",
     "admin_panel": "Панель администратора",
-    "themes": {}
+    "themes": {
+      "aestheticDark": "Эстетическая темнота",
+      "aestheticLight": "Эстетический свет",
+      "aqua": "Аква",
+      "dark": "Темный",
+      "dim": "Тусклый",
+      "forest": "Лес",
+      "light": "Свет",
+      "night": "Ночь",
+      "northernLights": "Северное сияние"
+    }
   },
   "about": {
     "about": "О программе",
@@ -47,7 +57,11 @@
     "feature_2": "Планирование поездок",
     "feature_2_desc": "Легко создавайте персональные маршруты и получайте подробную разбивку поездки по дням.",
     "feature_3": "Карта путешествий",
-    "feature_3_desc": "Просматривайте свои путешествия по всему миру с интерактивной картой и открывайте новые направления."
+    "feature_3_desc": "Просматривайте свои путешествия по всему миру с интерактивной картой и открывайте новые направления.",
+    "explore_world": "Исследуйте мир",
+    "latest_travel_experiences": "Ваш последний опыт путешествий",
+    "of_world": "мира",
+    "start_your_journey": "Начните свое путешествие"
   },
   "adventures": {
     "collection_remove_success": "Приключение успешно удалено из коллекции!",
@@ -104,7 +118,6 @@
     "date_constrain": "Ограничить датами коллекции",
     "rating": "Рейтинг",
     "my_images": "Мои изображения",
-    "show_region_labels": "Показать названия регионов",
     "no_images": "Нет изображений",
     "distance": "Расстояние",
     "share_adventure": "Поделиться этим приключением!",
@@ -271,7 +284,11 @@
     "lodging_information": "Информация о жилье",
     "price": "Цена",
     "reservation_number": "Номер бронирования",
-    "share_collection": "Поделитесь этой коллекцией!"
+    "share_collection": "Поделитесь этой коллекцией!",
+    "filters_and_sort": "Фильтры",
+    "filters_and_stats": "Фильтры",
+    "no_adventures_message": "Начните документировать ваши приключения и планировать новые. \nУ каждого путешествия есть история, которую стоит рассказать.",
+    "travel_progress": "Прогресс путешествий"
   },
   "worldtravel": {
     "country_list": "Список стран",
@@ -293,7 +310,36 @@
     "failed_to_remove_visit": "Не удалось удалить посещение",
     "marked_visited": "отмечено как посещённое",
     "regions_in": "Регионы в",
-    "cities": "городов"
+    "cities": "городов",
+    "all_regions": "Все регионы",
+    "available_to_explore": "Доступно для изучения",
+    "cities_in": "Города в",
+    "clear_all": "Очистить все",
+    "clear_all_filters": "Очистить все фильтры",
+    "clear_filters": "Четкие фильтры",
+    "complete": "Полный",
+    "countries": "страны",
+    "country_completed": "Страна завершена",
+    "filter_by": "Фильтр за",
+    "filter_by_region": "Фильтр по региону",
+    "hide_map": "Скрыть карту",
+    "hide_map_labels": "Скрыть этикетки карты",
+    "interactive_map": "Интерактивная карта",
+    "no_countries_found_desc": "Попробуйте настройки ваших поисковых терминов или фильтров, чтобы найти страны, которые вы ищете.",
+    "no_country_data_available": "Данные о стране не доступны",
+    "no_country_data_available_desc": "Пожалуйста, проверьте документацию для обновления данных региона.",
+    "no_regions_found": "Не было найдено регионов",
+    "of": "из",
+    "partial": "Частично",
+    "progress": "Прогресс",
+    "progress_and_stats": "Прогресс",
+    "region_completed": "Регион завершен",
+    "remaining": "Оставшийся",
+    "show_map": "Показать карту",
+    "show_map_labels": "Показать этикетки карты",
+    "total_cities": "Общие города",
+    "total_countries": "Всего стран",
+    "total_regions": "Общие регионы"
   },
   "auth": {
     "username": "Имя пользователя",
@@ -441,7 +487,14 @@
     "collection_edit_success": "Коллекция успешно отредактирована!",
     "error_editing_collection": "Ошибка редактирования коллекции",
     "public_collection": "Публичная коллекция",
-    "manage_collections": "Управлять коллекциями"
+    "manage_collections": "Управлять коллекциями",
+    "archived_appear_here": "Архивные коллекции появятся здесь.",
+    "create_first": "Создайте свою первую коллекцию, чтобы организовать свои приключения и воспоминания.",
+    "make_sure_public": "Убедитесь, что ваш профиль публично, чтобы другие могли поделиться с вами.",
+    "no_archived_collections": "Нет архивированных коллекций.",
+    "no_collections_yet": "Пока нет коллекций",
+    "no_shared_collections": "Нет общих коллекций.",
+    "shared_collections": "Общие коллекции"
   },
   "notes": {
     "note_deleted": "Заметка успешно удалена!",
@@ -522,7 +575,15 @@
     "show_visited_regions": "Показать посещенные регионы",
     "add_adventure_at_marker": "Добавить новое приключение в отмеченном месте",
     "clear_marker": "Очистить маркер",
-    "add_adventure": "Добавить новое приключение"
+    "add_adventure": "Добавить новое приключение",
+    "adventure_stats": "Приключенческая статистика",
+    "adventures_shown": "Приключения показаны",
+    "completion": "Завершение",
+    "display_options": "Параметры отображения",
+    "map_controls": "Карта управления",
+    "marker_placed_on_map": "Маркер размещен на карте",
+    "place_marker_desc": "Нажмите на карту, чтобы разместить маркер, или добавить приключение без местоположения.",
+    "regions": "Регионы"
   },
   "share": {
     "shared": "Поделено",
@@ -542,7 +603,15 @@
     "user_stats": "Статистика пользователя",
     "visited_countries": "Посещенные страны",
     "visited_regions": "Посещенные регионы",
-    "visited_cities": "Посещенные города"
+    "visited_cities": "Посещенные города",
+    "discovered": "обнаруженный",
+    "explored": "исследован",
+    "no_shared_adventures": "Этот пользователь еще не поделился публичными приключениями.",
+    "no_shared_collections": "Этот пользователь еще не поделился публичными коллекциями.",
+    "planned_trips": "Запланированные поездки",
+    "public_adventure_experiences": "Общественные приключения",
+    "travel_statistics": "Статистика путешествий",
+    "your_journey_at_a_glance": "Ваше приключенческое путешествие с первого взгляда"
   },
   "categories": {
     "manage_categories": "Управление категориями",
@@ -552,7 +621,8 @@
     "update_after_refresh": "Карточки приключений будут обновлены после обновления страницы.",
     "select_category": "Выбрать категорию",
     "category_name": "Название категории",
-    "add_new_category": "Добавить новую категорию"
+    "add_new_category": "Добавить новую категорию",
+    "name_required": "Требуется название категории"
   },
   "dashboard": {
     "welcome_back": "Добро пожаловать обратно",
@@ -562,7 +632,12 @@
     "total_visited_cities": "Всего посещенных городов",
     "recent_adventures": "Недавние приключения",
     "no_recent_adventures": "Нет недавних приключений?",
-    "add_some": "Почему бы не начать планировать ваше следующее приключение? Вы можете добавить новое приключение, нажав на кнопку ниже."
+    "add_some": "Почему бы не начать планировать ваше следующее приключение? Вы можете добавить новое приключение, нажав на кнопку ниже.",
+    "document_some_adventures": "Начните документировать свои путешествия и создать свою личную карту приключений!",
+    "view_all": "Просмотреть все",
+    "welcome_text_1": "Вы были на",
+    "welcome_text_2": "Приключения пока",
+    "welcome_text_3": "Продолжайте исследовать и документировать ваши путешествия!"
   },
   "immich": {
     "immich": "Immich",
